Update SeeAlso field for various mean functions.
Updated SeeAlso fields for numerous mean functions to cross-reference
other mean functions that were added later.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1688,7 +1688,7 @@ FPC=Y
 DisplayName="ArithmeticMean (Double overload)"
 DescEx="<p>Returns the arithmetic mean of an array of <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
 Units=SysUtils
-SeeAlso=ArithmeticMean_Integer,ArithmeticMean_Cardinal
+SeeAlso=ArithmeticMean_Integer,ArithmeticMean_Cardinal,WeightedArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,Median_Double,Mode,ModeAlt
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1700,7 +1700,7 @@ Delphi12A=Y
 DisplayName="ArithmeticMean (Integer overload)"
 DescEx="<p>Returns the arithmetic mean of an array of <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
 Units=SysUtils
-SeeAlso=ArithmeticMean_Double,ArithmeticMean_Cardinal
+SeeAlso=ArithmeticMean_Double,ArithmeticMean_Cardinal,WeightedArithmeticMean_Integer,GeometricMean_Integer,HarmonicMean_Integer,PowerMean_Integer,Median_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1712,7 +1712,7 @@ Delphi12A=Y
 DisplayName="ArithmeticMean (Cardinal overload)"
 DescEx="<p>Returns the arithmetic mean of an array of <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
 Units=SysUtils
-SeeAlso=ArithmeticMean_Double,ArithmeticMean_Integer
+SeeAlso=ArithmeticMean_Double,ArithmeticMean_Integer,WeightedArithmeticMean_Cardinal,GeometricMean_Cardinal,HarmonicMean_Cardinal,PowerMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1724,7 +1724,7 @@ Delphi12A=Y
 DisplayName="WeightedArithmeticMean (Double overload)"
 DescEx="<p>Calculates and returns the weighted average of the <var>Double</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Units=SysUtils,Math
-SeeAlso=ArithmeticMean_Double,WeightedArithmeticMean_Integer,WeightedArithmeticMean_Cardinal
+SeeAlso=ArithmeticMean_Double,WeightedArithmeticMean_Integer,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Double,WeightedHarmonicMean_Double,WeightedPowerMean_Double,LogarithmicMean
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1737,7 +1737,7 @@ DisplayName="WeightedArithmeticMean (Integer overload)"
 DescEx="<p>Calculates and returns the weighted average of the <var>Integer</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Units=
 Depends=WeightedArithmeticMean_Double
-SeeAlso=ArithmeticMean_Integer,WeightedArithmeticMean_Double,WeightedArithmeticMean_Cardinal
+SeeAlso=ArithmeticMean_Integer,WeightedArithmeticMean_Double,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Integer,WeightedHarmonicMean_Integer,WeightedPowerMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1750,7 +1750,7 @@ DisplayName="WeightedArithmeticMean (Cardinal overload)"
 DescEx="<p>Calculates and returns the weighted average of the <var>Cardinal</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
 Units=
 Depends=WeightedArithmeticMean_Double
-SeeAlso=ArithmeticMean_Cardinal,WeightedArithmeticMean_Double,WeightedArithmeticMean_Integer
+SeeAlso=ArithmeticMean_Cardinal,WeightedArithmeticMean_Double,WeightedArithmeticMean_Integer,WeightedGeometricMean_Cardinal,WeightedHarmonicMean_Cardinal,WeightedPowerMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1877,7 +1877,7 @@ DisplayName="Median (Double overload)"
 DescEx="<p>Returns the median of an array of floating point values.</p><p>Raises an <var>EArgumentException</var> exception if the array is empty.</p>"
 Kind=routine
 Units=SysUtils,Generics.Collections
-SeeAlso=Median_Integer
+SeeAlso=Median_Integer,ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,ModeAlt,Mode
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1890,7 +1890,7 @@ DisplayName="Median (Integer overload)"
 DescEx="<p>Returns the median of an array of integer values.</p><p>Raises an <var>EArgumentException</var> exception if the array is empty.</p>"
 Kind=routine
 Units=SysUtils,Generics.Collections
-SeeAlso=Median_Double
+SeeAlso=Median_Double,ArithmeticMean_Integer,GeometricMean_Integer,HarmonicMean_Integer,PowerMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1957,7 +1957,7 @@ DisplayName="NormaliseByWeight (Double overload)"
 DescEx="<p>Normalises the values in floating point array <var>A</var> so that each value of <var>A</var> is mapped to a value in the range [0..1], where the total of all the values is 1. The relative weights of the values are preserved.</p><p>An array of the same size as <var>A</var> is returned where each element contains the normalised value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty. All elements of <var>A</var> must be &gt;= 0, with at least one element &gt; 0. <var>EArgumentException</var> is raised if these conditions are not met.</p>"
 Kind=routine
 Units=SysUtils,Types,Math
-SeeAlso=RescaleRange_Double,WeightedArithmeticMean_Double,NormaliseByWeight_Cardinal
+SeeAlso=RescaleRange_Double,NormaliseByWeight_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1970,7 +1970,7 @@ DisplayName="NormaliseByWeight (Cardinal overload)"
 DescEx="<p>Normalises the values in unsigned integer array <var>A</var> so that each value of <var>A</var> is mapped to a value in the range [0..1], where the total of all the values is 1. The relative weights of the values are preserved.</p><p>An array of the same size as <var>A</var> is returned where each element contains the normalised value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty and must have at least one non-zero element. <var>EArgumentException</var> is raised if these conditions are not met.</p>"
 Kind=routine
 Units=SysUtils,Types
-SeeAlso=RescaleRange_Integer,WeightedArithmeticMean_Integer,NormaliseByWeight_Double
+SeeAlso=RescaleRange_Integer,NormaliseByWeight_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2012,7 +2012,7 @@ Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia
 Kind=routine
 Units=SysUtils
 Depends=SumOfLogs_Double
-SeeAlso=ArithmeticMean_Double,GeometricMean_Integer,GeometricMean_Cardinal,WeightedGeometricMean_Double
+SeeAlso=ArithmeticMean_Double,GeometricMean_Integer,GeometricMean_Cardinal,WeightedGeometricMean_Double,HarmonicMean_Double,PowerMean_Double,Median_Double,Mode,ModeAlt,LogarithmicMean
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2027,7 +2027,7 @@ Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia
 Kind=routine
 Units=SysUtils
 Depends=SumOfLogs_Cardinal
-SeeAlso=ArithmeticMean_Cardinal,GeometricMean_Integer,GeometricMean_Double,WeightedGeometricMean_Cardinal
+SeeAlso=ArithmeticMean_Cardinal,GeometricMean_Integer,GeometricMean_Double,WeightedGeometricMean_Cardinal,HarmonicMean_Cardinal,PowerMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2042,7 +2042,7 @@ Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Geometric_mean">Wikipedia
 Kind=routine
 Units=SysUtils
 Depends=SumOfLogs_Integer
-SeeAlso=ArithmeticMean_Integer,GeometricMean_Cardinal,GeometricMean_Double,WeightedGeometricMean_Integer
+SeeAlso=ArithmeticMean_Integer,GeometricMean_Cardinal,GeometricMean_Double,WeightedGeometricMean_Integer,HarmonicMean_Integer,PowerMean_Integer,Median_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2056,7 +2056,7 @@ DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
 Units=SysUtils,Types
 Depends=NormaliseByWeight_Double
-SeeAlso=GeometricMean_Double,WeightedArithmeticMean_Double,WeightedGeometricMean_Cardinal,WeightedGeometricMean_Integer
+SeeAlso=GeometricMean_Double,WeightedArithmeticMean_Double,WeightedGeometricMean_Cardinal,WeightedGeometricMean_Integer,WeightedHarmonicMean_Double,WeightedPowerMean_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2070,7 +2070,7 @@ DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
 Units=Types
 Depends=WeightedGeometricMean_Double
-SeeAlso=GeometricMean_Cardinal,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Double,WeightedGeometricMean_Integer
+SeeAlso=GeometricMean_Cardinal,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Double,WeightedGeometricMean_Integer,WeightedPowerMean_Cardinal, WeightedHarmonicMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2084,7 +2084,7 @@ DescEx="<p>Calculates and returns the weighted geometric mean of the array <var>
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Weighted_geometric_mean">Wikipedia</a> for information about the weighted geometric mean.</p>"
 Units=Types
 Depends=WeightedGeometricMean_Double
-SeeAlso=GeometricMean_Integer,WeightedArithmeticMean_Integer,WeightedGeometricMean_Double,WeightedGeometricMean_Cardinal
+SeeAlso=GeometricMean_Integer,WeightedArithmeticMean_Integer,WeightedGeometricMean_Double,WeightedGeometricMean_Cardinal,WeightedHarmonicMean_Integer,WeightedPowerMean_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2133,7 +2133,7 @@ DisplayName="HarmonicMean (Double overload)"
 DescEx="<p>Returns the harmonic mean of an array of positive <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
 Depends=SumOfReciprocals_Double
-SeeAlso=HarmonicMean_Integer,HarmonicMean_Cardinal,ArithmeticMean_Double,GeometricMean_Double
+SeeAlso=HarmonicMean_Integer,HarmonicMean_Cardinal,ArithmeticMean_Double,GeometricMean_Double,PowerMean_Double,Mode,ModeAlt,Median_Double,LogarithmicMean,WeightedHarmonicMean_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2146,7 +2146,7 @@ DisplayName="HarmonicMean (Cardinal overload)"
 DescEx="<p>Returns the harmonic mean of an array of positive <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
 Depends=SumOfReciprocals_Cardinal
-SeeAlso=HarmonicMean_Double,HarmonicMean_Integer,ArithmeticMean_Cardinal,GeometricMean_Cardinal
+SeeAlso=HarmonicMean_Double,HarmonicMean_Integer,ArithmeticMean_Cardinal,GeometricMean_Cardinal,PowerMean_Cardinal,WeightedHarmonicMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2159,7 +2159,7 @@ DisplayName="HarmonicMean (Integer overload)"
 DescEx="<p>Returns the harmonic mean of an array of positive <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty or if any array element is not positive.</p>"
 Extra="<p>See <a href="https://en.m.wikipedia.org/wiki/Harmonic_mean">Wikipedia</a> for information about the harmonic mean.</p>"
 Depends=SumOfReciprocals_Integer
-SeeAlso=HarmonicMean_Cardinal,HarmonicMean_Double,ArithmeticMean_Integer,GeometricMean_Integer
+SeeAlso=HarmonicMean_Cardinal,HarmonicMean_Double,ArithmeticMean_Integer,GeometricMean_Integer,PowerMean_Integer,WeightedHarmonicMean_Integer,Median_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2174,7 +2174,7 @@ Extra="<p>See <a href="https://en.wikipedia.org/wiki/Harmonic_mean#Weighted_harm
 Kind=routine
 Units=SysUtils,Types
 Depends=NormaliseByWeight_Double
-SeeAlso=HarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedHarmonicMean_Integer,WeightedArithmeticMean_Double,WeightedGeometricMean_Double
+SeeAlso=HarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedHarmonicMean_Integer,WeightedArithmeticMean_Double,WeightedGeometricMean_Double,WeightedPowerMean_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2189,7 +2189,7 @@ Extra="<p>See <a href="https://en.wikipedia.org/wiki/Harmonic_mean#Weighted_harm
 Kind=routine
 Units=Types
 Depends=WeightedHarmonicMean_Double
-SeeAlso=HarmonicMean_Cardinal,WeightedHarmonicMean_Double,WeightedHarmonicMean_Integer,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Cardinal
+SeeAlso=HarmonicMean_Cardinal,WeightedHarmonicMean_Double,WeightedHarmonicMean_Integer,WeightedArithmeticMean_Cardinal,WeightedGeometricMean_Cardinal,WeightedPowerMean_Cardinal
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2204,7 +2204,7 @@ Extra="<p>See <a href="https://en.wikipedia.org/wiki/Harmonic_mean#Weighted_harm
 Kind=routine
 Units=Types
 Depends=WeightedHarmonicMean_Double
-SeeAlso=HarmonicMean_Integer,WeightedHarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedArithmeticMean_Integer,WeightedGeometricMean_Integer
+SeeAlso=HarmonicMean_Integer,WeightedHarmonicMean_Double,WeightedHarmonicMean_Cardinal,WeightedArithmeticMean_Integer,WeightedGeometricMean_Integer,WeightedPowerMean_Integer,Median_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2218,7 +2218,7 @@ DescEx="<p>Returns the logarithmic mean of two positive floating point values, <
 Extra="<p>See <a href="https://www.ryantoomey.org/wiki/Logarithmic_mean_average">Chemepedia</a> for information about the logarithmic mean.</p>"
 Kind=routine
 Units=SysUtils,Math
-SeeAlso=ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double
+SeeAlso=ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,Median_Double,Mode,ModeAlt
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2232,7 +2232,7 @@ DescEx="<p>Returns the power mean of the elements of <var>Double</var> array <va
 Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em> and the <em>Holder mean</em>.</p><p>See <a href="https://en.m.wikipedia.org/wiki/Generalized_mean">Wikipedia</a> for further information.</p>"
 Kind=routine
 Units=SysUtils,Math
-SeeAlso=ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Cardinal,PowerMean_Integer,LogarithmicMean,WeightedPowerMean_Double
+SeeAlso=ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Cardinal,PowerMean_Integer,LogarithmicMean,WeightedPowerMean_Double,Mode,ModeAlt,Median_Double
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2247,7 +2247,7 @@ Extra="<p>The <em>power mean</em> is also known as the <em>generalised mean</em>
 Kind=routine
 Units=Types
 Depends=PowerMean_Double
-SeeAlso=ArithmeticMean_Integer,GeometricMean_Integer,HarmonicMean_Integer,PowerMean_Double,PowerMean_Cardinal,LogarithmicMean,WeightedPowerMean_Integer
+SeeAlso=ArithmeticMean_Integer,GeometricMean_Integer,HarmonicMean_Integer,PowerMean_Double,PowerMean_Cardinal,LogarithmicMean,WeightedPowerMean_Integer,Median_Integer
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2322,7 +2322,7 @@ Extra="<p>Some sources state that if all numbers in <var>A</var> occur the same 
 Kind=routine
 Units=SysUtils,Generics.Collections
 Depends=CountOccurrences
-SeeAlso=Median_Double,ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,ModeAlt
+SeeAlso=Median_Double,ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,ModeAlt,ModeCount,HasMode
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -2337,7 +2337,7 @@ Extra="<p>Some sources state that if all numbers in <var>A</var> occur the same 
 Kind=routine
 Units=SysUtils,Generics.Collections
 Depends=CountOccurrences
-SeeAlso=Median_Double,ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,Mode
+SeeAlso=Median_Double,ArithmeticMean_Double,GeometricMean_Double,HarmonicMean_Double,PowerMean_Double,LogarithmicMean,Mode,ModeCount,HasNode
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
